# motion-flow

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: cli.yml  lib.rs  main.rs
src/subcommands/: dummy.rs  flowanalysis.rs  mod.rs  show.rs
